packages/cashc/test/compiler/InvalidParameterTypeError/string_to_padded_bytes.cash
contract IntToByte() {
    function hello(string a, bytes2 b) {
        bytes2 c = toPaddedBytes(a, 2);
        require(b == c);
    }
}
